invalid_var_arg_keywords_test/invalid_var_arg_keywords_test_3.src
.IPPcode24
DEFVAR GF@a TF@b